# SWCompiler

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  make.sh  reformat.sh
cmake/: external_onnx.cmake
doc/: Doxyfile  cxxapi.md
include/: SWC.h  SWDSL.h  SWLOG.h  dotGen.h
python/: CMakeLists.txt  swcc.py  swcc_c_api.cpp  swcc_c_api.h  test.py
src/: CMakeLists.txt  SWDSL.h  SWLOG.h  common.h
src/backend/: Backend.cpp  Backend.h
src/basicOp/: Op.cpp  Op.h  basicOps.cpp  basicOps.h
src/codegen/: CMakeLists.txt  CPUDeviceManager.h  CodeWriter.h  Codegen.cpp  Codegen.h  DeviceManager.h  MakefileBuilder.cpp  MakefileBuilder.h  MemoryAllocator.cpp  MemoryAllocator.h  NVDeviceManager.h  ParallelCodegen.cpp  codegen.cpp  codegen.h  cuda_kernels.cu  image.h  kernels.h
src/codegen/utils/: DataLoader.cpp  DataLoader.h  cuda_kernels.h  download_caffe2_models.sh  download_data.sh  image.h  kernels.h  utils.h
src/devices/: DeviceTopology.h
src/diff/: AutoDiff.cpp  AutoDiff.h
src/dlOp/: dlOp.cpp  dlOp.h
src/engine/: Engine.cpp  Engine.h
src/graphIR/: IRGraph.cpp  IRGraph.h  IRNode.cpp  IRNode.h  OpNode.cpp  OpNode.h  TensorNode.cpp  TensorNode.h
src/importer/: Caffe2Importer.cpp  Caffe2Importer.h  ONNXImporter.cpp  ONNXImporter.h
src/op/: Op.cpp  Op.h  OpCost.cpp  comSizeModel.cpp  comSizeModel.h
src/op/basicOp/: basicOps.cpp  basicOps.h
src/op/dlOp/: dlOp.cpp  dlOp.h  dlOpAD.cpp  dlOpEinsum.cpp  dlOpInfo.cpp  dlOpLower.cpp  dlOpLowering.cpp
src/op/tensorOp/: tensorOps.cpp  tensorOps.h
src/parallel/: DecideStrategy.h  ParallelPattern.h  SearchSpace.cpp  SearchSpace.h  TilingLabel.h  parallelGen.cpp  parallelGen.h
src/pass/: AutodiffPass.cpp  AutodiffPass.h  CommSavingParaLoweringPass.cpp  ElimTransposePass.h  EliminationPass.cpp  EliminationPass.h  Label.h  LabelingPass.h  LoweringPass.h  OptimizePass.h  OptimizePassManager.h  Optimizer.cpp  Optimizer.h  ParallelLabelingPass.h  ParallelLoweringPass.h  ParallelingPass.h  RenamingNodePass.h  Subgraphpass.h  TensorTileLabel.h  TileHint.h  TilingLabel.h
src/tensor/: tensor.cpp  tensor.h
src/tool/: dotGen.cpp  dotGen.h
test/: CMakeLists.txt  test.cc  testBackend.cpp  testCodegen.cpp  testConvnet.cpp  testCopy.cpp  testDSL.cpp  testFitInput.cpp  testGPUInfer.cpp  testGraph.cpp  testGraphPartition.cpp  testHCI.cpp  testHCI_1.cpp  testImporter.cpp  testInfer.cpp  testJointGraph.cpp  testLeNetImport.cpp  testMLP.cpp  testMLPTrain.cpp  testMNist.cpp  testMPI.cpp  testMultiGraph.cpp  testONNXImport.cpp  testParaMLPTraining.cpp  testParallelPattern.cpp  testPolyMPI.cpp  testResnet.cpp  testResnet18.cpp  testResnetImport.cpp  testSnapshot.cpp  testTiling.cpp  testTraining.cpp  testVGGTrain.cpp
test/backend/: testBackendConvTrain.cpp  testBackendMLPDistTrain.cpp  testBackendMLPInfer.cpp  testBackendPara.cpp
test/benchmark/: MLP2.cpp  MLP3.cpp  alexnet.cpp  benchParallelLowering.cpp  lenetga.cpp  vgg19fused.cpp  vgg19ga.cpp
test/cuda/: testGPUInfer.cpp
test/engine/: testEngineLenetDistTrain.cpp  testEngineMLPDistInfer.cpp  testEngineMLPDistTrain.cpp  testEngineMLPInfer.cpp
test/importer/: testLeNetImport.cpp  testResnetImport.cpp  testVGG19Import.cpp
test/input/: mnist_images_8.meta.txt
test/old/: testMPI.cpp  testParaMLPTraining.cpp  testTraining.cpp
test/parallel/: testJointGraph.cpp  testLenetDistTrain.cpp  testMLPDistTrain.cpp  testParallelInfer.cpp  testParallelInferStrategyB.cpp  testParallelInferStrategyC.cpp  testParallelInferStrategyD.cpp
